--- a/test/fixtures/talks.yml
+++ b/test/fixtures/talks.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: talks
+#
+#  id          :integer         not null, primary key
+#  name        :string(255)
+#  title       :string(255)
+#  desc        :string(255)
+#  url         :string(255)
+#  meetingdate :date
+#  created_at  :datetime        not null
+#  updated_at  :datetime        not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
